fix issue #4 pop-up visibility customization

--- a/src/multislider-v43/style.scss
+++ b/src/multislider-v43/style.scss
@@ -159,6 +159,10 @@ $gradientColorVertical: linear-gradient(to top, $blue, $green);
       right: 20px;
       transform: translateY(50%);
     }
+
+    &_visible {
+      display: flex;
+    }
   }
 
   &__range {
